--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <style>
         .highlight { background-color: #fef3c7; font-weight: bold; }
         tr:nth-child(even) { background-color: #f9fafb; }
+        .sticky-header {
+            position: sticky;
+            top: 0;
+            z-index: 20;
+            background: white;
+        }
     </style>
 </head>
 <body class="bg-gray-50 min-h-screen p-4 md:p-8">
@@ -15,61 +21,73 @@
     <div class="max-w-7xl mx-auto">
         <header class="mb-8">
             <h1 class="text-3xl font-bold text-gray-900 mb-2">iPad Compatibility Matrix</h1>
-            <p class="text-gray-600">Search by Model Name, Model Number (e.g., A2993), or Case Type.</p>
+            <p class="text-gray-600">Search by Model Name, Model Number (e.g., A2993), Size, or Case Type.</p>
         </header>
 
         <div class="sticky top-4 z-10 mb-6">
-            <div class="relative shadow-sm">
-                <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+            <div class="relative shadow-lg">
+                <div class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none">
                     <svg class="h-5 w-5 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                     </svg>
                 </div>
                 <input type="text" id="searchInput" 
-                    class="block w-full pl-10 pr-3 py-4 border-2 border-blue-500 rounded-xl leading-5 bg-white placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent sm:text-lg transition-all" 
-                    placeholder="Type to search iPad models or model numbers...">
+                    class="block w-full pl-12 pr-3 py-4 border-2 border-blue-500 rounded-xl leading-5 bg-white placeholder-gray-500 focus:outline-none focus:ring-4 focus:ring-blue-100 focus:border-blue-600 sm:text-lg transition-all" 
+                    placeholder="Search e.g. '11-inch', 'A2993', or 'Mini'...">
             </div>
-            <div id="resultsCount" class="mt-2 text-sm text-gray-500 italic">Showing all models</div>
+            <div id="resultsCount" class="mt-2 text-sm text-gray-500 font-medium px-2">Showing all models</div>
         </div>
 
-        <div class="bg-white shadow-xl rounded-lg overflow-hidden border border-gray-200">
+        <div class="bg-white shadow-2xl rounded-2xl overflow-hidden border border-gray-200">
             <div class="overflow-x-auto">
                 <table class="min-w-full divide-y divide-gray-200" id="compatibilityTable">
-                    <thead class="bg-gray-800 text-white">
+                    <thead class="bg-gray-900 text-white">
                         <tr>
-                            <th class="px-6 py-4 text-left text-xs font-semibold uppercase tracking-wider">iPad Model</th>
-                            <th class="px-6 py-4 text-left text-xs font-semibold uppercase tracking-wider">Model Number</th>
-                            <th class="px-6 py-4 text-left text-xs font-semibold uppercase tracking-wider">Compatible Case(s)</th>
-                            <th class="px-6 py-4 text-left text-xs font-semibold uppercase tracking-wider">Connector</th>
-                            <th class="px-6 py-4 text-left text-xs font-semibold uppercase tracking-wider">Cables/Screen Protectors</th>
+                            <th class="px-6 py-4 text-left text-xs font-bold uppercase tracking-wider">iPad Model & Size</th>
+                            <th class="px-6 py-4 text-left text-xs font-bold uppercase tracking-wider">Model Number</th>
+                            <th class="px-6 py-4 text-left text-xs font-bold uppercase tracking-wider">Compatible Case(s)</th>
+                            <th class="px-6 py-4 text-left text-xs font-bold uppercase tracking-wider">Connector</th>
+                            <th class="px-6 py-4 text-left text-xs font-bold uppercase tracking-wider">Accessories</th>
                         </tr>
                     </thead>
                     <tbody class="divide-y divide-gray-200" id="tableBody">
-                        </tbody>
+                        <!-- Data injected by JS -->
+                    </tbody>
                 </table>
             </div>
-            <div id="noResults" class="hidden p-10 text-center text-gray-500">
-                No matching models found. Try searching for a specific model number like "A2126".
+            <div id="noResults" class="hidden p-16 text-center">
+                <svg class="mx-auto h-12 w-12 text-gray-400 mb-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="9.172 9.172a4 4 0 015.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+                <p class="text-xl font-semibold text-gray-900">No matching models found</p>
+                <p class="text-gray-500 mt-2">Try searching for a specific model number like "A2126" or a size like "12.9".</p>
             </div>
         </div>
     </div>
 
     <script>
         const data = [
-            { model: "iPad mini", numbers: "A1432, A1454, A1455", cases: "PROFOLIO, TRIFOLIO, R•EVOLVE, Little BUDDY", connector: "Lightning", extra: "Cable, Screen Protector, Tablet Stand" },
-            { model: "iPad mini 2", numbers: "A1489, A1490, A1491", cases: "PROFOLIO, TRIFOLIO, R•EVOLVE, Little BUDDY", connector: "Lightning", extra: "Cable, Screen Protector, Tablet Stand" },
-            { model: "iPad mini 3", numbers: "A1599, A1600", cases: "PROFOLIO, TRIFOLIO, R•EVOLVE, Little BUDDY", connector: "Lightning", extra: "Cable, Screen Protector, Tablet Stand" },
-            { model: "iPad mini 4", numbers: "A1538, A1550", cases: "PROFOLIO, TRIFOLIO, R•EVOLVE, Little BUDDY", connector: "Lightning", extra: "Cable, Screen Protector, Tablet Stand" },
-            { model: "iPad mini 5", numbers: "A2126, A2124, A2133, A2125", cases: "PROFOLIO, TRIFOLIO, PRESTIGE, HUEX, Little BUDDY", connector: "Lightning", extra: "Cable, Screen Protector, Tablet Stand" },
-            { model: "iPad mini 6", numbers: "A2567, A2568, A2569", cases: "PRESTIGE Folio, HUEX FOLIO", connector: "Lightning", extra: "Cable, Screen Protector, Tablet Stand" },
-            { model: "iPad mini 7", numbers: "A2993, A2995, A2996", cases: "HUEX FOLIO Versatile, PRESTIGE Folio", connector: "Type-C", extra: "Cable, Screen Protector, Tablet Stand" },
-            { model: "iPad (1st Gen)", numbers: "A1219, A1337", cases: "N/A", connector: "30-pin", extra: "None available" },
-            { model: "iPad 10.2-inch (9th gen)", numbers: "A2603, A2604", cases: "HUEX, HUEX Folio, PRESTIGE, SHIELD ENDURO", connector: "Lightning", extra: "Cable, Screen Protector, Tablet Stand" },
-            { model: "iPad 10.9-inch (10th gen)", numbers: "A2757, A2777, A2696", cases: "HUEX FOLIO, PRESTIGE FOLIO MG, SHIELD ENDURO", connector: "Type-C", extra: "Cable, Screen Protector, Tablet Stand" },
-            { model: "iPad Air 11-inch (2024)", numbers: "A2902, A2899, A2900", cases: "HUEX Folio, PRESTIGE, Zuro Folio, TYPEFOLIO", connector: "Type-C", extra: "Cable, Screen Protector, Tablet Stand" },
-            { model: "iPad Pro 11-inch (2024)", numbers: "A2836, A2837, A3006", cases: "HUEX FOLIO, PRESTIGE FOLIO MG, Zuro Folio", connector: "Type-C", extra: "Cable, Screen Protector, Tablet Stand" },
-            { model: "iPad Pro 13-inch (2024)", numbers: "A2925, A2926, A3007", cases: "HUEX FOLIO, PRESTIGE FOLIO MG", connector: "Type-C", extra: "Cable, Screen Protector, Tablet Stand" }
-            // ... add other rows following this pattern
+            { model: "iPad mini (1st Gen)", size: "7.9-inch", numbers: "A1432, A1454, A1455", cases: "PROFOLIO, TRIFOLIO, R•EVOLVE", connector: "Lightning", extra: "Cable, Screen Protector" },
+            { model: "iPad mini 2", size: "7.9-inch", numbers: "A1489, A1490, A1491", cases: "PROFOLIO, TRIFOLIO, R•EVOLVE", connector: "Lightning", extra: "Cable, Screen Protector" },
+            { model: "iPad mini 3", size: "7.9-inch", numbers: "A1599, A1600", cases: "PROFOLIO, TRIFOLIO, R•EVOLVE", connector: "Lightning", extra: "Cable, Screen Protector" },
+            { model: "iPad mini 4", size: "7.9-inch", numbers: "A1538, A1550", cases: "PROFOLIO, TRIFOLIO, R•EVOLVE", connector: "Lightning", extra: "Cable, Screen Protector" },
+            { model: "iPad mini 5", size: "7.9-inch", numbers: "A2133, A2124, A2126, A2125", cases: "PRESTIGE, HUEX, Little BUDDY", connector: "Lightning", extra: "Cable, Screen Protector" },
+            { model: "iPad mini 6", size: "8.3-inch", numbers: "A2567, A2568, A2569", cases: "PRESTIGE Folio, HUEX FOLIO", connector: "USB-C", extra: "Cable, Screen Protector" },
+            { model: "iPad mini 7 (A17 Pro)", size: "8.3-inch", numbers: "A2993, A2995, A2996", cases: "HUEX FOLIO Versatile, PRESTIGE Folio", connector: "USB-C", extra: "Cable, Screen Protector" },
+            { model: "iPad (9th gen)", size: "10.2-inch", numbers: "A2602, A2603, A2604, A2605", cases: "HUEX, PRESTIGE, SHIELD ENDURO", connector: "Lightning", extra: "Cable, Screen Protector" },
+            { model: "iPad (10th gen)", size: "10.9-inch", numbers: "A2696, A2757, A2777", cases: "HUEX FOLIO, PRESTIGE FOLIO MG, SHIELD ENDURO", connector: "USB-C", extra: "USB-C Cable, Screen Protector" },
+            { model: "iPad Air 4", size: "10.9-inch", numbers: "A2316, A2324, A2325, A2072", cases: "HUEX, PRESTIGE, Zuro Folio", connector: "USB-C", extra: "Cable, Screen Protector" },
+            { model: "iPad Air 5", size: "10.9-inch", numbers: "A2588, A2589, A2591", cases: "HUEX, PRESTIGE, Zuro Folio", connector: "USB-C", extra: "Cable, Screen Protector" },
+            { model: "iPad Air 11-inch (M2)", size: "11-inch", numbers: "A2902, A2903, A2904, A2899", cases: "HUEX Folio, PRESTIGE, TYPEFOLIO", connector: "USB-C", extra: "Cable, Screen Protector" },
+            { model: "iPad Air 13-inch (M2)", size: "13-inch", numbers: "A2898, A2900, A2899", cases: "HUEX FOLIO, PRESTIGE FOLIO MG", connector: "USB-C", extra: "Cable, Screen Protector" },
+            { model: "iPad Pro 11-inch (1st Gen)", size: "11-inch", numbers: "A1980, A2013, A1934, A1979", cases: "HUEX, PRESTIGE Folio", connector: "USB-C", extra: "Cable, Screen Protector" },
+            { model: "iPad Pro 11-inch (2nd Gen)", size: "11-inch", numbers: "A2228, A2068, A2230, A2231", cases: "HUEX, PRESTIGE Folio", connector: "USB-C", extra: "Cable, Screen Protector" },
+            { model: "iPad Pro 11-inch (3rd Gen)", size: "11-inch", numbers: "A2377, A2459, A2301, A2460", cases: "HUEX, PRESTIGE Folio", connector: "USB-C", extra: "Cable, Screen Protector" },
+            { model: "iPad Pro 11-inch (4th Gen)", size: "11-inch", numbers: "A2759, A2435, A2761, A2762", cases: "HUEX, PRESTIGE Folio", connector: "USB-C", extra: "Cable, Screen Protector" },
+            { model: "iPad Pro 11-inch (M4)", size: "11-inch", numbers: "A2836, A2837, A3006", cases: "HUEX FOLIO, Zuro Folio", connector: "USB-C", extra: "USB-C Cable, Screen Protector" },
+            { model: "iPad Pro 12.9-inch (5th Gen)", size: "12.9-inch", numbers: "A2378, A2461, A2379, A2462", cases: "HUEX FOLIO, PRESTIGE FOLIO MG", connector: "USB-C", extra: "Cable, Screen Protector" },
+            { model: "iPad Pro 12.9-inch (6th Gen)", size: "12.9-inch", numbers: "A2436, A2764, A2437, A2766", cases: "HUEX FOLIO, PRESTIGE FOLIO MG", connector: "USB-C", extra: "Cable, Screen Protector" },
+            { model: "iPad Pro 13-inch (M4)", size: "13-inch", numbers: "A2925, A2926, A3007", cases: "HUEX FOLIO, PRESTIGE FOLIO MG", connector: "USB-C", extra: "USB-C Cable, Screen Protector" }
         ];
 
         const tableBody = document.getElementById('tableBody');
@@ -78,10 +96,12 @@
         const resultsCount = document.getElementById('resultsCount');
 
         function renderTable(filter = '') {
+            const searchTerm = filter.toLowerCase().trim();
             const filteredData = data.filter(item => 
-                item.model.toLowerCase().includes(filter.toLowerCase()) || 
-                item.numbers.toLowerCase().includes(filter.toLowerCase()) ||
-                item.cases.toLowerCase().includes(filter.toLowerCase())
+                item.model.toLowerCase().includes(searchTerm) || 
+                item.numbers.toLowerCase().includes(searchTerm) ||
+                item.cases.toLowerCase().includes(searchTerm) ||
+                item.size.toLowerCase().includes(searchTerm)
             );
 
             tableBody.innerHTML = '';
@@ -95,11 +115,21 @@
                 
                 filteredData.forEach(item => {
                     const row = `
-                        <tr class="hover:bg-blue-50 transition-colors">
-                            <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">${item.model}</td>
-                            <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-600 font-mono">${item.numbers}</td>
-                            <td class="px-6 py-4 text-sm text-gray-600">${item.cases}</td>
-                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${item.connector}</td>
+                        <tr class="hover:bg-blue-50 transition-colors group">
+                            <td class="px-6 py-4 whitespace-nowrap">
+                                <div class="text-sm font-bold text-gray-900 group-hover:text-blue-700 transition-colors">${item.model}</div>
+                                <div class="text-xs font-semibold text-blue-500 mt-1 bg-blue-50 inline-block px-2 py-0.5 rounded-full border border-blue-100">${item.size}</div>
+                            </td>
+                            <td class="px-6 py-4 text-sm text-gray-700 font-mono">
+                                <span class="bg-gray-100 px-2 py-1 rounded text-xs">${item.numbers}</span>
+                            </td>
+                            <td class="px-6 py-4 text-sm text-gray-600 font-medium">${item.cases}</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-sm">
+                                <span class="flex items-center">
+                                    <span class="w-2 h-2 rounded-full ${item.connector === 'USB-C' ? 'bg-green-500' : 'bg-amber-500'} mr-2"></span>
+                                    ${item.connector}
+                                </span>
+                            </td>
                             <td class="px-6 py-4 text-sm text-gray-500">${item.extra}</td>
                         </tr>
                     `;
@@ -111,7 +141,7 @@
         // Initialize table
         renderTable();
 
-        // Search Event (Simulation of AJAX logic)
+        // Search Event with simple debounce-like behavior
         searchInput.addEventListener('input', (e) => {
             renderTable(e.target.value);
         });
